@@ -1,5 +1,9 @@
 package uk.gov.hmcts.reform.civil.ga.handler.callback.camunda.businessprocess;
 
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -9,9 +13,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDataContent;
@@ -30,6 +31,7 @@ import uk.gov.hmcts.reform.civil.ga.model.genapplication.GeneralApplicationPbaDe
 import uk.gov.hmcts.reform.civil.ga.service.GaCoreCaseDataService;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.genapplication.CaseLink;
 import uk.gov.hmcts.reform.civil.model.Fee;
@@ -57,7 +59,6 @@ import uk.gov.hmcts.reform.civil.ga.model.genapplication.finalorder.AssistedOrde
 import uk.gov.hmcts.reform.civil.sampledata.CaseDetailsBuilder;
 import uk.gov.hmcts.reform.civil.ga.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.ga.service.ParentCaseUpdateHelper;
-import uk.gov.hmcts.reform.civil.ga.utils.JudicialDecisionNotificationUtil;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -71,6 +72,7 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -96,35 +98,43 @@ import static uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder.CUSTOMER_REFE
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@SpringBootTest(classes = {
-    EndGeneralAppBusinessProcessCallbackHandler.class,
-    CaseDetailsConverter.class,
-    GaCoreCaseDataService.class,
-    ParentCaseUpdateHelper.class,
-    ObjectMapper.class,
-    JudicialDecisionNotificationUtil.class
-})
+@ExtendWith(MockitoExtension.class)
 public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
     private EndGeneralAppBusinessProcessCallbackHandler handler;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @Spy
+    private ObjectMapper objectMapper = ObjectMapperFactory.instance();
 
-    @Autowired
-    private ParentCaseUpdateHelper parentCaseUpdateHelper;
-
-    @MockBean
+    @Mock
     private CaseDetailsConverter caseDetailsConverter;
 
-    @MockBean
+    @Mock
     private GaCoreCaseDataService coreCaseDataService;
 
-    @MockBean
+    @Mock
     private GaForLipService gaForLipService;
-    @MockBean
+
+    @Mock
     private FeatureToggleService featureToggleService;
+
+    private ParentCaseUpdateHelper parentCaseUpdateHelper;
+
+    @BeforeEach
+    void setUpHandler() {
+        parentCaseUpdateHelper = spy(new ParentCaseUpdateHelper(
+            caseDetailsConverter,
+            coreCaseDataService,
+            featureToggleService,
+            objectMapper
+        ));
+        handler = new EndGeneralAppBusinessProcessCallbackHandler(
+            caseDetailsConverter,
+            gaForLipService,
+            parentCaseUpdateHelper
+        );
+    }
+
     @Captor
     private ArgumentCaptor<Map<String, Object>> mapCaptor;
 
@@ -157,41 +167,37 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppRespondentAgreement(GARespondentOrderAgreement.builder().hasAgreed(NO).build())
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(NO).build())
                 .ccdState(PENDING_APPLICATION_ISSUED)
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(Fee.builder().code("FREE").build()).build())
+                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(new Fee().setCode("FREE")).build())
                 .ccdCaseReference(1234L)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink().setCaseReference("0000"))
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
                 .build();
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
-            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
-                                                                              .get("gaDetailsMasterCollection"),
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(), new TypeReference<>() {});
+            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map.get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
         }
@@ -208,19 +214,16 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(NO).build())
                 .ccdState(AWAITING_APPLICATION_PAYMENT)
                 .ccdCaseReference(1234L)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(Fee.builder().code("PAY").build()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink().setCaseReference("0000"))
+                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(new Fee().setCode("PAY")).build())
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
@@ -228,20 +231,20 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
-            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
-                                                                              .get("gaDetailsMasterCollection"),
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(), new TypeReference<>() {});
+            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map.get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
         }
@@ -259,19 +262,16 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(NO).build())
                 .ccdState(AWAITING_APPLICATION_PAYMENT)
                 .ccdCaseReference(1234L)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(Fee.builder().code("PAY").build()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink().setCaseReference("0000"))
+                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(new Fee().setCode("PAY")).build())
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
@@ -279,27 +279,27 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
-            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
-                                                                              .get("gaDetailsMasterCollection"),
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(), new TypeReference<>() {});
+            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map.get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
         }
 
         @Test
         void shouldAddGaToJudgeCollectionPaymentThroughHelpWithFeesFullRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData updatedCaseDate = GeneralApplicationCaseData.builder()
                 .parentClaimantIsApplicant(YES)
                 .generalAppHelpWithFees(new HelpWithFees().setHelpWithFee(YES))
@@ -310,48 +310,46 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(NO).build())
                 .ccdState(AWAITING_APPLICATION_PAYMENT)
                 .ccdCaseReference(1234L)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink().setCaseReference("0000"))
                 .generalAppType(GAApplicationType.builder().types(types).build())
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
-                                          .fee(Fee.builder().code("PAY").build())
-                                          .paymentDetails(PaymentDetails.builder().build())
+                                          .fee(new Fee().setCode("PAY"))
+                                          .paymentDetails(new PaymentDetails())
                                           .build())
                 .build();
 
-            GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
-                .caseState("Awaiting Application Payment")
-                .caseLink(CaseLink.builder()
-                              .caseReference("1234")
-                              .build())
-                .build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
-                .claimantGaAppDetails(wrapElements(claimantCollection))
+                .claimantGaAppDetails(wrapElements(GeneralApplicationsDetails.builder()
+                                                       .caseState("Awaiting Application Payment")
+                                                       .caseLink(CaseLink.builder()
+                                                                     .caseReference("1234")
+                                                                     .build())
+                                                       .build()))
                 .build();
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseDataFullRemission().getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseDataFullRemission();
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseDataFullRemission());
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
-            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
-                                                                              .get("gaDetailsMasterCollection"),
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(), new TypeReference<>() {});
+            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map.get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
         }
 
         @Test
         void shouldAddGaToJudgeCollectionPaymentThroughHelpWithFeesPartRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData updatedCaseDate = GeneralApplicationCaseData.builder()
                 .parentClaimantIsApplicant(YES)
                 .generalAppHelpWithFees(new HelpWithFees().setHelpWithFee(YES))
@@ -363,41 +361,39 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(NO).build())
                 .ccdState(AWAITING_APPLICATION_PAYMENT)
                 .ccdCaseReference(1234L)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink().setCaseReference("0000"))
                 .generalAppType(GAApplicationType.builder().types(types).build())
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
-                                          .fee(Fee.builder().code("PAY").build())
-                                          .paymentDetails(PaymentDetails.builder().build())
+                                          .fee(new Fee().setCode("PAY"))
+                                          .paymentDetails(new PaymentDetails())
                                           .build())
                 .build();
 
-            GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
-                .caseState("Awaiting Application Payment")
-                .caseLink(CaseLink.builder()
-                              .caseReference("1234")
-                              .build())
-                .build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
-                .claimantGaAppDetails(wrapElements(claimantCollection))
+                .claimantGaAppDetails(wrapElements(GeneralApplicationsDetails.builder()
+                                                       .caseState("Awaiting Application Payment")
+                                                       .caseLink(CaseLink.builder()
+                                                                     .caseReference("1234")
+                                                                     .build())
+                                                       .build()))
                 .build();
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseDataPartRemission().getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseDataPartRemission();
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseDataPartRemission());
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
-            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
-                                                                              .get("gaDetailsMasterCollection"),
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(), new TypeReference<>() {});
+            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map.get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
         }
@@ -415,32 +411,29 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(NO).build())
                 .ccdState(PENDING_APPLICATION_ISSUED)
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
-                                          .fee(Fee.builder().code("PAY").build()).build())
+                                          .fee(new Fee().setCode("PAY")).build())
                 .ccdCaseReference(1234L)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink().setCaseReference("0000"))
                 .build();
-
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
-            GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
-                .caseState("Awaiting Application Payment")
-                .caseLink(CaseLink.builder()
-                              .caseReference("1234")
-                              .build())
-                .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
-                .claimantGaAppDetails(wrapElements(claimantCollection))
+                .claimantGaAppDetails(wrapElements(GeneralApplicationsDetails.builder()
+                                                       .caseState("Awaiting Application Payment")
+                                                       .caseLink(CaseLink.builder()
+                                                                     .caseReference("1234")
+                                                                     .build())
+                                                       .build()))
                 .build();
 
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             verify(coreCaseDataService, times(2))
@@ -448,17 +441,14 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
-            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
-                                                                              .get("gaDetailsMasterCollection"),
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(), new TypeReference<>() {});
+            List<?> gaDetailsMasterCollection = objectMapper.convertValue(map.get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
-
         }
 
         public CallbackParams getCallbackParamsGaForLipCaseData(YesOrNo hwf) {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .isGaApplicantLip(YES)
                 .generalAppType(GAApplicationType.builder().types(types).build())
@@ -468,19 +458,19 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             CaseDetails caseDetails = CaseDetails
                 .builder()
-                .data(objectMapper.convertValue(caseData, new TypeReference<Map<String, Object>>() {}))
+                .data(objectMapper.convertValue(caseData, new TypeReference<>() {
+                }))
                 .build();
 
-            return CallbackParams.builder()
+            return new CallbackParams()
                 .type(ABOUT_TO_SUBMIT)
                 .request(CallbackRequest.builder().caseDetails(caseDetails)
                              .build())
-                .caseData(caseData)
-                .build();
+                .caseData(caseData);
         }
 
         public CallbackParams getCallbackParamsGaForLipCaseDataFullRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .isGaApplicantLip(YES)
                 .generalAppType(GAApplicationType.builder().types(types).build())
@@ -492,19 +482,19 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             CaseDetails caseDetails = CaseDetails
                 .builder()
-                .data(objectMapper.convertValue(caseData, new TypeReference<Map<String, Object>>() {}))
+                .data(objectMapper.convertValue(caseData, new TypeReference<>() {
+                }))
                 .build();
 
-            return CallbackParams.builder()
+            return new CallbackParams()
                 .type(ABOUT_TO_SUBMIT)
                 .request(CallbackRequest.builder().caseDetails(caseDetails)
                              .build())
-                .caseData(caseData)
-                .build();
+                .caseData(caseData);
         }
 
         public CallbackParams getCallbackParamsGaForLipCaseDataPartRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .isGaApplicantLip(YES)
                 .generalAppType(GAApplicationType.builder().types(types).build())
@@ -517,34 +507,32 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             CaseDetails caseDetails = CaseDetails
                 .builder()
-                .data(objectMapper.convertValue(caseData, new TypeReference<Map<String, Object>>() {}))
+                .data(objectMapper.convertValue(caseData, new TypeReference<>() {
+                }))
                 .build();
 
-            return CallbackParams.builder()
+            return new CallbackParams()
                 .type(ABOUT_TO_SUBMIT)
                 .request(CallbackRequest.builder().caseDetails(caseDetails)
                              .build())
-                .caseData(caseData)
-                .build();
+                .caseData(caseData);
         }
 
         public StartEventResponse getStartEventResponse() {
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234L")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
                 .build();
             CaseDetails caseDetails = CaseDetails.builder().data(objectMapper.convertValue(
                 caseData,
-                new TypeReference<Map<String, Object>>() {})).build();
+                new TypeReference<>() {
+                })).build();
 
             return StartEventResponse.builder().caseDetails(caseDetails).build();
         }
@@ -598,10 +586,10 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
-                .isEqualTo("Awaiting Respondent Response");;
+                .isEqualTo("Awaiting Respondent Response");
 
         }
 
@@ -649,10 +637,10 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
-                .isEqualTo("Proceeds In Heritage");;
+                .isEqualTo("Proceeds In Heritage");
 
         }
 
@@ -731,18 +719,18 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Application Dismissed");
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Application Dismissed");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Application Dismissed");
 
@@ -784,23 +772,23 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Application Submitted - Awaiting Judicial Decision");
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Application Submitted - Awaiting Judicial Decision");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Application Submitted - Awaiting Judicial Decision");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                 .isEqualTo("Application Submitted - Awaiting Judicial Decision");
@@ -808,12 +796,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         @Test
         void theEndOfProcessShouldNotUpdateTheStateOfGAAndAlsoOnParentCaseGADetailsForDirectionOrder() {
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse(YES, NO));
-            when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParams(YES, NO).getRequest().getCaseDetails()))
                 .thenReturn(getSampleGeneralApplicationCaseDataByState(YES, NO, AWAITING_DIRECTIONS_ORDER_DOCS));
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse(YES, NO).getCaseDetails()))
-                .thenReturn(getParentCaseDataBeforeUpdate(YES, NO));
 
             handler.handle(getCallbackParams(YES, NO));
 
@@ -824,12 +808,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         @Test
         void theEndOfProcessShouldNotUpdateTheStateOfGAAndAlsoOnParentCaseGADetailsForWrittenRep() {
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse(YES, NO));
-            when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParams(YES, NO).getRequest().getCaseDetails()))
                 .thenReturn(getSampleGeneralApplicationCaseDataByState(YES, NO, AWAITING_WRITTEN_REPRESENTATIONS));
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse(YES, NO).getCaseDetails()))
-                .thenReturn(getParentCaseDataBeforeUpdate(YES, NO));
 
             handler.handle(getCallbackParams(YES, NO));
 
@@ -840,12 +820,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         @Test
         void theEndOfProcessShouldNotUpdateTheStateOfGAAndAlsoOnParentCaseGADetailsForAddlInfo() {
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse(YES, NO));
-            when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParams(YES, NO).getRequest().getCaseDetails()))
                 .thenReturn(getSampleGeneralApplicationCaseDataByState(YES, NO, AWAITING_ADDITIONAL_INFORMATION));
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse(YES, NO).getCaseDetails()))
-                .thenReturn(getParentCaseDataBeforeUpdate(YES, NO));
 
             handler.handle(getCallbackParams(YES, NO));
 
@@ -904,22 +880,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Awaiting Respondent Response");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Awaiting Respondent Response");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                 .isEqualTo("Awaiting Respondent Response");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Awaiting Respondent Response");
@@ -1154,22 +1130,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Awaiting Application Payment");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Awaiting Application Payment");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                 .isEqualTo("Awaiting Application Payment");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Awaiting Application Payment");
@@ -1213,22 +1189,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Order Made");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Order Made");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                     .isEqualTo("Order Made");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                     .isEqualTo("Order Made");
@@ -1269,22 +1245,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Listed for a Hearing");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Listed for a Hearing");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                     .isEqualTo("Listed for a Hearing");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                     .isEqualTo("Listed for a Hearing");
@@ -1303,17 +1279,17 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                     .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(isTobeNotified).build())
                 .generalAppPBADetails(
                     GAPbaDetails.builder()
-                        .paymentDetails(PaymentDetails.builder()
-                                            .status(PaymentStatus.SUCCESS)
-                                            .reference("RC-1658-4258-2679-9795")
-                                            .customerReference(CUSTOMER_REFERENCE)
-                                            .build())
+                        .paymentDetails(new PaymentDetails()
+                                            .setStatus(PaymentStatus.SUCCESS)
+                                            .setReference("RC-1658-4258-2679-9795")
+                                            .setCustomerReference(CUSTOMER_REFERENCE)
+                                            )
                         .fee(
-                            Fee.builder()
-                                .code("FE203")
-                                .calculatedAmountInPence(BigDecimal.valueOf(27500))
-                                .version("1")
-                                .build())
+                            new Fee()
+                                .setCode("FE203")
+                                .setCalculatedAmountInPence(BigDecimal.valueOf(27500))
+                                .setVersion("1")
+                                )
                         .serviceReqReference(CUSTOMER_REFERENCE).build())
                     .generalAppDetailsOfOrder(STRING_CONSTANT)
                     .generalAppReasonsOfOrder(STRING_CONSTANT)
@@ -1324,8 +1300,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                             .email("abc@gmail.com").build()))
                     .isMultiParty(NO)
                     .parentClaimantIsApplicant(isConsented)
-                    .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                            .caseReference(PARENT_CCD_REF.toString()).build())
+                    .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                            .setCaseReference(PARENT_CCD_REF.toString()))
                     .build();
         }
 
@@ -1338,17 +1314,17 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(isTobeNotified).build())
                 .generalAppPBADetails(
                     GAPbaDetails.builder()
-                        .paymentDetails(PaymentDetails.builder()
-                                            .status(PaymentStatus.SUCCESS)
-                                            .reference("RC-1658-4258-2679-9795")
-                                            .customerReference(CUSTOMER_REFERENCE)
-                                            .build())
+                        .paymentDetails(new PaymentDetails()
+                                            .setStatus(PaymentStatus.SUCCESS)
+                                            .setReference("RC-1658-4258-2679-9795")
+                                            .setCustomerReference(CUSTOMER_REFERENCE)
+                                            )
                         .fee(
-                            Fee.builder()
-                                .code("FE203")
-                                .calculatedAmountInPence(BigDecimal.valueOf(27500))
-                                .version("1")
-                                .build())
+                            new Fee()
+                                .setCode("FE203")
+                                .setCalculatedAmountInPence(BigDecimal.valueOf(27500))
+                                .setVersion("1")
+                                )
                         .serviceReqReference(CUSTOMER_REFERENCE).build())
                 .generalAppDetailsOfOrder(STRING_CONSTANT)
                 .generalAppReasonsOfOrder(STRING_CONSTANT)
@@ -1360,8 +1336,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .respondentsResponses(respondentsResponses)
                 .isMultiParty(NO)
                 .parentClaimantIsApplicant(isConsented)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                              .caseReference(PARENT_CCD_REF.toString()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                                              .setCaseReference(PARENT_CCD_REF.toString()))
                 .build();
         }
 
@@ -1375,17 +1351,17 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(isTobeNotified).build())
                 .generalAppPBADetails(
                     GAPbaDetails.builder()
-                        .paymentDetails(PaymentDetails.builder()
-                                            .status(PaymentStatus.SUCCESS)
-                                            .reference("RC-1658-4258-2679-9795")
-                                            .customerReference(CUSTOMER_REFERENCE)
-                                            .build())
+                        .paymentDetails(new PaymentDetails()
+                                            .setStatus(PaymentStatus.SUCCESS)
+                                            .setReference("RC-1658-4258-2679-9795")
+                                            .setCustomerReference(CUSTOMER_REFERENCE)
+                                            )
                         .fee(
-                            Fee.builder()
-                                .code("FE203")
-                                .calculatedAmountInPence(BigDecimal.valueOf(27500))
-                                .version("1")
-                                .build())
+                            new Fee()
+                                .setCode("FE203")
+                                .setCalculatedAmountInPence(BigDecimal.valueOf(27500))
+                                .setVersion("1")
+                                )
                         .serviceReqReference(CUSTOMER_REFERENCE).build())
                 .generalAppDetailsOfOrder(STRING_CONSTANT)
                 .generalAppReasonsOfOrder(STRING_CONSTANT)
@@ -1396,8 +1372,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .respondentsResponses(respondentResponses)
                 .generalAppRespondentSolicitors(respondentDetails)
                 .parentClaimantIsApplicant(isConsented)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                              .caseReference(PARENT_CCD_REF.toString()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                                              .setCaseReference(PARENT_CCD_REF.toString()))
                 .build();
         }
 
@@ -1410,11 +1386,11 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppPBADetails(
                     GAPbaDetails.builder()
                         .fee(
-                            Fee.builder()
-                                .code("FE203")
-                                .calculatedAmountInPence(BigDecimal.valueOf(27500))
-                                .version("1")
-                                .build())
+                            new Fee()
+                                .setCode("FE203")
+                                .setCalculatedAmountInPence(BigDecimal.valueOf(27500))
+                                .setVersion("1")
+                                )
                         .serviceReqReference(CUSTOMER_REFERENCE).build())
                 .generalAppDetailsOfOrder(STRING_CONSTANT)
                 .generalAppReasonsOfOrder(STRING_CONSTANT)
@@ -1425,8 +1401,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                                                                  .email("abc@gmail.com").build()))
                 .isMultiParty(NO)
                 .parentClaimantIsApplicant(YES)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                              .caseReference(PARENT_CCD_REF.toString()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                                              .setCaseReference(PARENT_CCD_REF.toString()))
                 .build();
         }
 
@@ -1437,7 +1413,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
         }
 
         private GeneralApplicationCaseData getSampleGeneralApplicationCaseDataForCCJ(YesOrNo isConsented, YesOrNo isTobeNotified) {
-            List<GeneralApplicationTypes> types = Arrays.asList(CONFIRM_CCJ_DEBT_PAID);
+            List<GeneralApplicationTypes> types = List.of(CONFIRM_CCJ_DEBT_PAID);
             return GeneralApplicationCaseDataBuilder.builder().buildCaseDateBaseOnGeneralApplication(
                     getGeneralApplication(isConsented, isTobeNotified))
                 .toBuilder().ccdCaseReference(CHILD_CCD_REF).generalAppType(GAApplicationType.builder().types(types).build()).build();
@@ -1445,7 +1421,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         private GeneralApplicationCaseData getSampleGeneralApplicationCaseDataForVaryJudgement(YesOrNo isConsented, YesOrNo isTobeNotified,
                                                                              List<Element<GARespondentResponse>> respondentsResponses) {
-            List<GeneralApplicationTypes> types = Arrays.asList(VARY_PAYMENT_TERMS_OF_JUDGMENT);
+            List<GeneralApplicationTypes> types = List.of(VARY_PAYMENT_TERMS_OF_JUDGMENT);
 
             return GeneralApplicationCaseDataBuilder.builder().buildCaseDateBaseOnGeneralApplication(
                     getGeneralApplicationVary(isConsented, isTobeNotified, respondentsResponses))
@@ -1493,7 +1469,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
         private CallbackParams getCallbackParamsMulti(YesOrNo isConsented, YesOrNo isTobeNotified,
                                                       List<Element<GARespondentResponse>> respondentResponses,
                                                       List<Element<GASolicitorDetailsGAspec>> respondentDetails) {
-            return CallbackParams.builder()
+            return new CallbackParams()
                 .type(ABOUT_TO_SUBMIT)
                 .pageId(null)
                 .request(CallbackRequest.builder()
@@ -1501,49 +1477,49 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                                               .data(objectMapper.convertValue(
                                                   getSampleGeneralApplicationCaseDataMulti(isConsented, isTobeNotified,
                                                                                            respondentResponses, respondentDetails),
-                                                  new TypeReference<Map<String, Object>>() {})).id(CASE_ID).build())
+                                                  new TypeReference<>() {
+                                                  })).id(CASE_ID).build())
                              .eventId("END_BUSINESS_PROCESS_GASPEC")
                              .build())
                 .caseData(getSampleGeneralApplicationCaseDataMulti(isConsented, isTobeNotified,
                                                                    respondentResponses, respondentDetails))
                 .version(null)
-                .params(null)
-                .build();
+                .params(null);
         }
 
         private CallbackParams getCallbackParamsOfVary(YesOrNo isConsented, YesOrNo isTobeNotified) {
             List<Element<GARespondentResponse>> respondentsResponses = new ArrayList<>();
-            return CallbackParams.builder()
+            return new CallbackParams()
                 .type(ABOUT_TO_SUBMIT)
                 .pageId(null)
                 .request(CallbackRequest.builder()
                              .caseDetails(CaseDetails.builder()
                                               .data(objectMapper.convertValue(
                                                   getSampleGeneralApplicationCaseDataForVaryJudgement(isConsented, isTobeNotified, respondentsResponses),
-                                                  new TypeReference<Map<String, Object>>() {})).id(CASE_ID).build())
+                                                  new TypeReference<>() {
+                                                  })).id(CASE_ID).build())
                              .eventId("END_BUSINESS_PROCESS_GASPEC")
                              .build())
                 .caseData(getSampleGeneralApplicationCaseDataForVaryJudgement(isConsented, isTobeNotified, respondentsResponses))
                 .version(null)
-                .params(null)
-                .build();
+                .params(null);
         }
 
         private CallbackParams getCallbackParams(YesOrNo isConsented, YesOrNo isTobeNotified) {
-            return CallbackParams.builder()
+            return new CallbackParams()
                     .type(ABOUT_TO_SUBMIT)
                     .pageId(null)
                     .request(CallbackRequest.builder()
                             .caseDetails(CaseDetails.builder()
                                     .data(objectMapper.convertValue(
                                             getSampleGeneralApplicationCaseData(isConsented, isTobeNotified),
-                                            new TypeReference<Map<String, Object>>() {})).id(CASE_ID).build())
+                                            new TypeReference<>() {
+                                            })).id(CASE_ID).build())
                             .eventId("END_BUSINESS_PROCESS_GASPEC")
                             .build())
                     .caseData(getSampleGeneralApplicationCaseData(isConsented, isTobeNotified))
                     .version(null)
-                    .params(null)
-                    .build();
+                    .params(null);
         }
 
         private StartEventResponse getStartEventResponse(YesOrNo isConsented, YesOrNo isTobeNotified) {
@@ -1619,11 +1595,11 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             return GeneralApplicationCaseData.builder()
                 .ccdCaseReference(CHILD_CCD_REF)
                 .ccdState(PENDING_APPLICATION_ISSUED)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                              .caseReference(PARENT_CCD_REF.toString()).build())
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().paymentDetails(PaymentDetails.builder()
-                                                                                .customerReference("1336546")
-                                                                                .build()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                                              .setCaseReference(PARENT_CCD_REF.toString()))
+                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().paymentDetails(new PaymentDetails()
+                                                                                .setCustomerReference("1336546")
+                                                                                ).build())
                 .generalAppRespondentSolicitors(respondentSols)
                 .hearingDetailsResp(GAHearingDetails.builder()
                                         .hearingPreferredLocation(
@@ -1655,11 +1631,11 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             return GeneralApplicationCaseData.builder()
                 .ccdCaseReference(CHILD_CCD_REF)
                 .ccdState(PENDING_APPLICATION_ISSUED)
-                .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                              .caseReference(PARENT_CCD_REF.toString()).build())
-                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().paymentDetails(PaymentDetails.builder()
-                                                                                .customerReference("1336546")
-                                                                                .build()).build())
+                .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                                              .setCaseReference(PARENT_CCD_REF.toString()))
+                .generalAppPBADetails(GeneralApplicationPbaDetails.builder().paymentDetails(new PaymentDetails()
+                                                                                .setCustomerReference("1336546")
+                                                                                ).build())
                 .generalAppRespondentSolicitors(respondentSols)
                 .isMultiParty(YES)
                 .parentClaimantIsApplicant(NO)
