@@ -4,12 +4,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.autoconfigure.validation.ValidationAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
@@ -25,6 +23,7 @@ import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -42,20 +41,19 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    HearingScheduledEventCallbackHandler.class,
-    JacksonAutoConfiguration.class,
-    ValidationAutoConfiguration.class,
-    CaseDetailsConverter.class,
-})
+@ExtendWith(MockitoExtension.class)
 class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
-    private final ObjectMapper mapper = new ObjectMapper();
-    @Autowired
+    @Spy
+    private ObjectMapper mapper = ObjectMapperFactory.instance();
+
+    @Spy
+    private CaseDetailsConverter caseDetailsConverter = new CaseDetailsConverter(mapper);
+
+    @InjectMocks
     private HearingScheduledEventCallbackHandler handler;
-    @MockBean
+
+    @Mock
     private GeneralAppLocationRefDataService locationRefDataService;
 
     @Nested
@@ -64,26 +62,22 @@ class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCal
         @Test
         void shouldReturnLocationList_whenLocationsAreQueried() {
             List<LocationRefData> locations = new ArrayList<>();
-            locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
-                              .build());
-            locations.add(LocationRefData.builder().siteName("Site Name 2").courtAddress("Address2").postcode("28000")
-                              .build());
+            locations.add(new LocationRefData().setSiteName("Site Name 1").setCourtAddress("Address1").setPostcode("18000"));
+            locations.add(new LocationRefData().setSiteName("Site Name 2").setCourtAddress("Address2").setPostcode("28000"));
             when(locationRefDataService.getCourtLocations(any())).thenReturn(locations);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().ccdState(CaseState.LISTING_FOR_A_HEARING).build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_START);
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("gaHearingNoticeDetail")))
-                .get("hearingLocation")).get("list_items")).get(0))
+                .get("hearingLocation")).get("list_items")).getFirst())
                            .get("label")).isEqualTo("Site Name 1 - Address1 - 18000");
         }
 
         @Test
         void shouldNotPrepopulateData_whenCcdStateIsOrderMade() {
             List<LocationRefData> locations = new ArrayList<>();
-            locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
-                              .build());
-            locations.add(LocationRefData.builder().siteName("Site Name 2").courtAddress("Address2").postcode("28000")
-                              .build());
+            locations.add(new LocationRefData().setSiteName("Site Name 1").setCourtAddress("Address1").setPostcode("18000"));
+            locations.add(new LocationRefData().setSiteName("Site Name 2").setCourtAddress("Address2").setPostcode("28000"));
             when(locationRefDataService.getCourtLocations(any())).thenReturn(locations);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().ccdState(CaseState.ORDER_MADE).build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_START);
@@ -95,10 +89,8 @@ class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCal
         @Test
         void shouldReturnLocationList_with_preferredLocationSelected_whenLocationsAreQueried() {
             List<LocationRefData> locations = new ArrayList<>();
-            locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
-                              .build());
-            locations.add(LocationRefData.builder().siteName("Site Name 2").courtAddress("Address2").postcode("28000")
-                              .build());
+            locations.add(new LocationRefData().setSiteName("Site Name 1").setCourtAddress("Address1").setPostcode("18000"));
+            locations.add(new LocationRefData().setSiteName("Site Name 2").setCourtAddress("Address2").setPostcode("28000"));
             DynamicListElement location1 = DynamicListElement.builder()
                 .code(String.valueOf(UUID.randomUUID())).label("Site Name 2 - Address2 - 28000").build();
 
@@ -121,10 +113,8 @@ class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCal
         @Test
         void shouldNotReturnLocationList_with_preferredLocationSelected_whenLocationsAreQueried() {
             List<LocationRefData> locations = new ArrayList<>();
-            locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
-                              .build());
-            locations.add(LocationRefData.builder().siteName("Site Name 2").courtAddress("Address2").postcode("28000")
-                              .build());
+            locations.add(new LocationRefData().setSiteName("Site Name 1").setCourtAddress("Address1").setPostcode("18000"));
+            locations.add(new LocationRefData().setSiteName("Site Name 2").setCourtAddress("Address2").setPostcode("28000"));
             DynamicListElement location1 = DynamicListElement.builder()
                 .code(String.valueOf(UUID.randomUUID())).label("Site Name 2 - Address2 - 28000").build();
 
@@ -138,7 +128,7 @@ class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCal
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_START);
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("gaHearingNoticeDetail")))
-                .get("hearingLocation")).get("list_items")).get(0))
+                .get("hearingLocation")).get("list_items")).getFirst())
                            .get("label")).isEqualTo("Site Name 1 - Address1 - 18000");
         }
     }
@@ -164,14 +154,14 @@ class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCal
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
-            assertThat(response.getErrors().get(0)).isEqualTo("Hearing date must be in the future");
+            assertThat(response.getErrors().getFirst()).isEqualTo("Hearing date must be in the future");
         }
 
         @Test
         void shouldNotReturnError_whenDateFromDateIsTwentyFourHoursAfterOfPresentDateProvided() {
             LocalDateTime localDateTime = LocalDateTime.now().plusHours(24).plusMinutes(1);
             String hours = "0" + (localDateTime.getHour());
-            String minutes = "0" + String.valueOf(localDateTime.getMinute());
+            String minutes = "0" + localDateTime.getMinute();
             hours = hours.substring(hours.length() - 2);
             minutes = minutes.substring(minutes.length() - 2);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().build().toBuilder()
@@ -192,10 +182,8 @@ class HearingScheduledEventCallbackHandlerTest extends GeneralApplicationBaseCal
         @Test
         void shouldGetDueDateAndFeeSmallClaim_whenAboutToSubmit() {
             List<LocationRefData> locations = new ArrayList<>();
-            locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
-                              .build());
-            locations.add(LocationRefData.builder().siteName("Site Name 2").courtAddress("Address2").postcode("28000")
-                              .build());
+            locations.add(new LocationRefData().setSiteName("Site Name 1").setCourtAddress("Address1").setPostcode("18000"));
+            locations.add(new LocationRefData().setSiteName("Site Name 2").setCourtAddress("Address2").setPostcode("28000"));
             DynamicListElement location1 = DynamicListElement.builder()
                 .code(String.valueOf(UUID.randomUUID())).label("Site Name 2 - Address2 - 28000").build();
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().build().toBuilder()
